PulseChart: Fixed 4618 Bottom x-axis overlaps popup

--- a/src/Clients/CustomVisuals/visuals/pulseChart/styles/pulseChart.less
+++ b/src/Clients/CustomVisuals/visuals/pulseChart/styles/pulseChart.less
@@ -49,7 +49,7 @@
         stroke-width: 2px;
     }
 
-    .x {
+    .xAxisNode {
         font-size: @fontSize;
 
         line {
